--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -80,7 +80,7 @@
 
       {{ with $person.interests }}
       <div class="col-md-5">
-        <div class="section-subheading">{{ i18n "interestss" | markdownify }}</div>
+        <div class="section-subheading">{{ i18n "interests" | markdownify }}</div>
         <ul class="ul-interests mb-0">
           {{ range . }}
           <li>{{ . | markdownify | emojify }}</li>
