--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -77,7 +77,17 @@
     </div>
 
     <div class="row">
-
+      {{ with $person.awards }}
+      <div class="col-md-12">
+        <div class="section-subheading">{{ i18n "awards" | markdownify }}</div>
+        <ul class="ul-interests mb-0">
+          {{ range . }}
+          <li>{{ . | markdownify | emojify }}</li>
+          {{ end }}
+        </ul>
+      </div>
+      {{ end }}
+      
       {{ with $person.interests }}
       <div class="col-md-5">
         <div class="section-subheading">{{ i18n "interests" | markdownify }}</div>
