--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -114,7 +114,13 @@
             <i class="fa-li fas fa-university"></i>
             <div class="description">
               <p class="course">{{ .position }}{{ with .year }}, {{ . }}{{ end }}</p>
-              <p class="institution">{{ .institution | markdownify }}</p>
+              <p class="institution">
+                {{ if .url_institution }}
+                  <a href="{{ .url_institution }}"> {{ .institution }}</a>
+                {{ else }}
+                  {{ .institution }}
+                {{ end }}
+              </p>
             </div>
             {{ end }}
           </li>
